client: fix scrollbar

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -117,3 +117,8 @@ p{
 		grid-template-columns: repeat(1, 1fr);
 	}
 }
+
+#demo-simple-select {
+	/* background-color: blue; */
+	/* position: absolute; */
+}
